--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@radix-ui/react-icons": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "tailwindcss-font-inter": "^3.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
